基本样式修改

--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -2,9 +2,9 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <div class="layui-row">
+    <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
-            <div class="layui-card">
+            <div class="layui-card search-card">
                 <div class="layui-card-body search-card-body">
                     <!--<form class="layui-form" method="post" action="{:url('admin/auth.admin/index','',false)}" tableid="tableReload" id="formRule" lay-filter="rule">-->
                         <!--<div class="layui-form-item">-->
