--- a/application/admin/view/index/forget.html
+++ b/application/admin/view/index/forget.html
@@ -12,11 +12,7 @@
 </head>
 <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
     <div class="layadmin-user-login-main">
-        <div class="layadmin-user-login-box layadmin-user-login-header">
-            <h2>后台登陆</h2>
-        </div>
         <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
-
             <script type="text/html" template>
                 {{# if(layui.router().search.type === 'resetpass'){ }}
                 <div class="layui-form-item">
@@ -43,7 +39,7 @@
                         </div>
                         <div class="layui-col-xs5">
                             <div style="margin-left: 10px;">
-                                <img src="https://www.oschina.net/action/user/captcha" class="layadmin-user-login-codeimg" id="LAY-user-get-vercode">
+                                <img src="{:rtrim('__PUBLIC__', '/')}/captcha" class="layadmin-user-login-codeimg" id="LAY-user-get-vercode" width="100" height="36" onclick="this.src = '{:rtrim('__PUBLIC__', '/')}/captcha?r=' + Math.random();"/>
                             </div>
                         </div>
                     </div>
@@ -91,14 +87,14 @@
             var field = obj.field;
 
             //请求接口
-            admin.req({
-                url: layui.setter.base + 'json/user/forget.js' //实际使用请改成服务端真实接口
-                ,data: field
-                ,done: function(res){
-                    location.hash = '/type=resetpass';
-                    location.reload();
-                }
-            });
+//            admin.req({
+//                url: layui.setter.base + 'json/user/forget.js' //实际使用请改成服务端真实接口
+//                ,data: field
+//                ,done: function(res){
+//                    location.hash = '/type=resetpass';
+//                    location.reload();
+//                }
+//            });
 
             return false;
         });
