--- a/public/static/style/login.css
+++ b/public/static/style/login.css
@@ -27,7 +27,7 @@
 }
 
 .layadmin-user-login-box {
-    padding: 20px;
+    padding: 50px 20px 20px 20px;
     width: 420px;
     box-sizing: border-box;
     background: #fff;
