--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -3,70 +3,71 @@
 <body>
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12 webody">
+            <div class="layui-col-sm6 layui-col-md3">
+                <div class="layui-card">
+                    <div class="layui-card-header">
+                        访问量
+                        <span class="layui-badge layui-bg-blue layuiadmin-badge">周</span>
+                    </div>
+                    <div class="layui-card-body layuiadmin-card-list">
+                        <p class="layuiadmin-big-font" id="readCount">0</p>
+                        <p>
+                            总计访问量
+                            <span class="layuiadmin-span-color">88万 <i class="layui-inline layui-icon layui-icon-flag"></i></span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-col-sm6 layui-col-md3">
+                <div class="layui-card">
+                    <div class="layui-card-header">
+                        下载
+                        <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span>
+                    </div>
+                    <div class="layui-card-body layuiadmin-card-list">
+                        <p class="layuiadmin-big-font" id="downloadCount">0</p>
+                        <p>
+                            新下载
+                            <span class="layuiadmin-span-color">10% <i class="layui-inline layui-icon layui-icon-face-smile-b"></i></span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-col-sm6 layui-col-md3">
+                <div class="layui-card">
+                    <div class="layui-card-header">
+                        收入
+                        <span class="layui-badge layui-bg-green layuiadmin-badge">年</span>
+                    </div>
+                    <div class="layui-card-body layuiadmin-card-list">
 
-        <div class="layui-col-sm6 layui-col-md3">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    访问量
-                    <span class="layui-badge layui-bg-blue layuiadmin-badge">周</span>
-                </div>
-                <div class="layui-card-body layuiadmin-card-list">
-                    <p class="layuiadmin-big-font" id="readCount">0</p>
-                    <p>
-                        总计访问量
-                        <span class="layuiadmin-span-color">88万 <i class="layui-inline layui-icon layui-icon-flag"></i></span>
-                    </p>
+                        <p class="layuiadmin-big-font" id="incomeCount">0</p>
+                        <p>
+                            总收入
+                            <span class="layuiadmin-span-color">*** <i class="layui-inline layui-icon layui-icon-dollar"></i></span>
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="layui-col-sm6 layui-col-md3">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    下载
-                    <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span>
-                </div>
-                <div class="layui-card-body layuiadmin-card-list">
-                    <p class="layuiadmin-big-font" id="downloadCount">0</p>
-                    <p>
-                        新下载
-                        <span class="layuiadmin-span-color">10% <i class="layui-inline layui-icon layui-icon-face-smile-b"></i></span>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="layui-col-sm6 layui-col-md3">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    收入
-                    <span class="layui-badge layui-bg-green layuiadmin-badge">年</span>
-                </div>
-                <div class="layui-card-body layuiadmin-card-list">
+            <div class="layui-col-sm6 layui-col-md3">
+                <div class="layui-card">
+                    <div class="layui-card-header">
+                        活跃用户
+                        <span class="layui-badge layui-bg-orange layuiadmin-badge">月</span>
+                    </div>
+                    <div class="layui-card-body layuiadmin-card-list">
 
-                    <p class="layuiadmin-big-font" id="incomeCount">0</p>
-                    <p>
-                        总收入
-                        <span class="layuiadmin-span-color">*** <i class="layui-inline layui-icon layui-icon-dollar"></i></span>
-                    </p>
+                        <p class="layuiadmin-big-font" id="onlineCount">0</p>
+                        <p>
+                            最近一个月
+                            <span class="layuiadmin-span-color">15% <i class="layui-inline layui-icon layui-icon-user"></i></span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="layui-col-sm6 layui-col-md3">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    活跃用户
-                    <span class="layui-badge layui-bg-orange layuiadmin-badge">月</span>
-                </div>
-                <div class="layui-card-body layuiadmin-card-list">
-
-                    <p class="layuiadmin-big-font" id="onlineCount">0</p>
-                    <p>
-                        最近一个月
-                        <span class="layuiadmin-span-color">15% <i class="layui-inline layui-icon layui-icon-user"></i></span>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="layui-col-sm12">
+        <div class="layui-col-sm12 webody1">
             <div class="layui-card">
                 <div class="layui-card-header">
                     访问量
@@ -111,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <div class="layui-col-sm12">
+        <div class="layui-col-sm12 webody1">
             <div class="layui-row layui-col-space15">
                 <div class="layui-col-sm6">
                     <div class="layui-card">
