--- a/application/admin/view/common/script.html
+++ b/application/admin/view/common/script.html
@@ -9,6 +9,7 @@
         ,toastr = layui.toastr
         toastr.options ={
             "closeButton":true,//显示关闭按钮
+            "progressBar":true,
         };
         //清除缓存
         $(document).on('click', "dl.clearcache dd a", function () {
