根据条件筛选导出数据

--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -187,6 +187,7 @@
         weTable.api.init({
             table : "rule",
             tableid : "tableReload",
+            form:$("form#formRule"),
             tableCommon: tableCommon,
             extend : {
                 "add_url": "{:url('admin/auth.admin/add','',false)}",
