数据导出终极

--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -141,7 +141,7 @@
 //            ,limit : 4
             ,loading:true
             ,limit:10
-            ,defaultToolbar: ['filter','exports']//'filter', 'print', 'exports'
+            ,defaultToolbar: ['filter']//'filter', 'print', 'exports'
             ,search: true
             ,cols: [[
                 {type:'checkbox', fixed: 'left',}
@@ -194,7 +194,7 @@
                 "edit_url": "{:url('admin/auth.admin/edit','',false)}/ids/",
                 "view_url": "{:url('admin/auth.admin/view','',false)}/ids",
                 "del_url": "{:url('admin/auth.admin/del','',false)}",
-                "export_url" : "{:url('admin/auth.admin/export','',false)}"
+                "export_url" : "{:url('admin/auth.admin/index','',false)}"
             }
         });
 
