--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -176,10 +176,10 @@
 //        });
 
         //监听性别操作
-        form.on('switch(ruleStatus)', function(obj){
-//            console.log(obj);
-            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
-        });
+//        form.on('switch(ruleStatus)', function(obj){
+////            console.log(obj);
+//            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
+//        });
 
         /**
          * 表格初始化
