--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -105,9 +105,9 @@
             }
         });
 
-        form.on('switch(ruleStatus)', function(obj){
-            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
-        });
+//        form.on('switch(ruleStatus)', function(obj){
+//            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
+//        });
 
         /**
          * 表格初始化
