--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <!--头工具栏-->
-{:build_toolbar('toolbar',['refresh', 'add', 'del'])}
+{:build_toolbar('toolbar',['refresh', 'add', 'del', 'import'])}
 <!--头工具栏-->
 
 <!--状态-->
