--- a/application/admin/view/auth/rule/index.html
+++ b/application/admin/view/auth/rule/index.html
@@ -6,7 +6,7 @@
         <div class="layui-col-md12 webody">
             <div class="layui-card">
                 <div class="layui-card-body">
-                    <table class="layui-hide" id="tableReload" lay-filter="tableReload" table-reload-id="tableReload"></table>
+                    <table class="layui-hide" id="tableReload" lay-filter="tableReload" lay-size="sm" table-reload-id="tableReload"></table>
                 </div>
             </div>
         </div>
