--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -81,6 +81,7 @@
             ,url:"{:url('Admin/Order/index')}"
             ,id : 'tableReload'
             ,skin:'line'
+            ,defaultToolbar: ['filter']
             ,toolbar : '#toolbar'
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
@@ -97,6 +98,11 @@
                 ,first: false //不显示首页
                 ,last: false //不显示尾页
 
+            }
+            ,done: function(res, curr, count){
+                if(res.status == 'success') {
+                    layer.closeAll();
+                }
             }
         });
         var demoListView = $('#demoList');
