--- a/application/admin/view/push/index.html
+++ b/application/admin/view/push/index.html
@@ -57,6 +57,7 @@
             ,url:"{:url('Admin/Push/index')}"
             ,id : 'tableReload'
             ,skin:'line'
+            ,defaultToolbar: ['filter']
             ,toolbar : '#toolbar'
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
@@ -73,6 +74,11 @@
                 ,first: false //不显示首页
                 ,last: false //不显示尾页
 
+            }
+            ,done: function(res, curr, count){
+                if(res.status == 'success') {
+                    layer.closeAll();
+                }
             }
         });
 
