--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1535,3 +1535,39 @@ body .layui-layer-we .layui-layer-setwin {
 body .layui-layer-we{
     border-radius:4px;
 }
+
+.layui-input, .layui-select, .layui-textarea,.layui-form-label,.layui-input-inline,.xm-input,.xm-select{
+    height: 30px !important;
+    line-height: 30px !important;
+    padding: 2px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
