--- a/application/admin/view/auth/admin/add.html
+++ b/application/admin/view/auth/admin/add.html
@@ -2,6 +2,7 @@
 {block name="content"}
 <body>
 <div class="layui-container lay_top">
+    <!--layui-card-->
     <div class="layui-row layui-col-space30">
         <div class="layui-col-xs12">
         <form class="layui-form" action="{:url('admin/auth.admin/add','',false)}" tableid="tableReload" method="post" id="formRule" lay-filter="rule">
@@ -51,8 +52,8 @@
 
             <div class="layui-form-item footer-form">
                 <div class="footer">
-                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn btn-success btn-embossed disabled">{:__('OK')}</button>
-                    <button type="reset" class="layui-btn layui-btn-primary btn-embossed">{:__('Reset')}</button>
+                    <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
+                    <button type="reset" class="layui-btn layui-btn-sm btn-embossed">{:__('Reset')}</button>
                 </div>
             </div>
         </form>
