--- a/application/admin/view/system/base_info.html
+++ b/application/admin/view/system/base_info.html
@@ -5,7 +5,11 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
         <div class="layui-card">
-            <div class="layui-card-header">系统基本信息</div>
+            <!--<div class="layui-card-header">-->
+                <fieldset class="layui-elem-field layui-field-title">
+                    <legend> 系统基本信息</legend>
+                </fieldset>
+            <!--</div>-->
             <div class="layui-card-body">
                 <div class="layui-tab layui-tab-brief" lay-filter="component-tabs-brief">
                     <ul class="layui-tab-title">
