--- a/application/admin/view/system/security.html
+++ b/application/admin/view/system/security.html
@@ -5,7 +5,9 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
         <div class="layui-card">
-            <div class="layui-card-header">安全设置</div>
+            <fieldset class="layui-elem-field layui-field-title">
+                <legend>安全设置</legend>
+            </fieldset>
             <div class="layui-card-body">
                 <div class="layui-tab layui-tab-brief" lay-filter="component-tabs-brief">
                     <ul class="layui-tab-title">
@@ -23,8 +25,10 @@
                                 </div>
                                 <div class="layui-form-item">
                                     <div class="layui-input-block">
-                                        <button class="layui-btn" lay-submit="" lay-filter="component-form-element">确实</button>
-                                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                                        <div class="footer-form">
+                                            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">确实</button>
+                                            <button type="reset" class="layui-btn layui-btn-sm">重置</button>
+                                        </div>
                                     </div>
                                 </div>
                                 <!--<div class="layui-form-item footer-form">-->
@@ -84,8 +88,10 @@
                                     </div>
                                 <div class="layui-form-item">
                                     <div class="layui-input-block">
-                                        <button class="layui-btn" lay-submit="" lay-filter="component-form-element">确实</button>
-                                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                                        <div class="footer-form">
+                                            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="component-form-element">确实</button>
+                                            <button type="reset" class="layui-btn layui-btn-sm">重置</button>
+                                        </div>
                                     </div>
                                 </div>
                             </form>
