--- a/application/admin/view/auth/admin/edit.html
+++ b/application/admin/view/auth/admin/edit.html
@@ -86,8 +86,8 @@
          */
         formValidator.api.bindevent($("form#formRule"));
 //        form.on('submit(formRule)', function(data){
-//            var formData = JSON.stringify(data.field);
-//            we.api.ajax({"url":"{:url('admin/auth.admin/edit','',false)}","data":data.field,'tableid':'tableReload'});
+//            var formData = JSON.stringify(data.fields);
+//            we.api.ajax({"url":"{:url('admin/auth.admin/edit','',false)}","data":data.fields,'tableid':'tableReload'});
 //        });
 //        formSelects.config('select', {
 //            type: 'get',                //请求方式: post, get, put, delete...
