--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -82,7 +82,7 @@
 </div>
 
 <!--头工具栏-->
-{:build_toolbar('toolbar',['refresh', 'add', 'del', 'export','import'])}
+{:build_toolbar('toolbar',['refresh', 'add', 'del', 'export'])}
 <!--<script type="text/html" id="toolbar">-->
     <!--<div class="layui-btn-container">-->
         <!--<button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i>添加</button>-->
