--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -107,7 +107,7 @@
                                 <div class="layui-form-item">
                                     <div class="layui-input-block">
                                         <div class="footer-form">
-                                            <button class="layui-btn layui-btn-sm" type="submit" lay-submit="" lay-filter="component-form-element">确实</button>
+                                            <button class="layui-btn layui-btn-sm" type="submit" lay-submit="" lay-filter="component-form-element">保存</button>
                                             <button type="reset" class="layui-btn  layui-btn-sm">重置</button>
                                         </div>
                                     </div>
