--- a/application/admin/view/auth/admin/add.html
+++ b/application/admin/view/auth/admin/add.html
@@ -88,8 +88,8 @@
         formValidator.api.bindevent($("form#formRule"));
         //监听提交
 //        form.on('submit(formRule)', function(data){
-//            var formData = JSON.stringify(data.field);
-//            we.api.ajax({"url":"{:url('admin/auth.admin/add','',false)}","data":data.field,'tableid':'tableReload'});
+//            var formData = JSON.stringify(data.fields);
+//            we.api.ajax({"url":"{:url('admin/auth.admin/add','',false)}","data":data.fields,'tableid':'tableReload'});
 //        });
 //        formSelects.config('select', {
 //            type: 'get',                //请求方式: post, get, put, delete...
