--- a/application/admin/view/fields/add.html
+++ b/application/admin/view/fields/add.html
@@ -9,7 +9,7 @@
                 <table class="layui-table" lay-skin="line" lay-size="sm">
                     <colgroup>
                         <col class="tdleft" width="20%">
-                        <col class="tdright" width="30%">
+                        <col class="tdright" width="60%">
                         <col>
                     </colgroup>
                     <tbody>
@@ -18,14 +18,14 @@
                         <td class="tdright">
                             <input type="text" name="username" data-rule="required;" lay-verify="username" autocomplete="off" value="" placeholder="" class="layui-input">
                         </td>
-                        <td>字母、数字下划线</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td class="tdleft">字段标识<span class="tips">*</span></td>
                         <td class="tdright">
                             <input type="text" name="username" data-rule="required;" lay-verify="username" autocomplete="off" value="" placeholder="" class="layui-input">
                         </td>
-                        <td>字母、数字下划线</td>
+                        <td>(注意：字母、数字下划线)</td>
                     </tr>
                     </tbody>
                 </table>
